--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <section class="resume animate-up">
-      <iframe src="c:\Users\HP\OneDrive\Desktop\Resumes and other Docs\Resumes\SNAYAK RESUME 2025 1.0.pdf" width="100%" height="800px"></iframe>
+      <iframe src="E:\My Resume sildes\SNAYAK RESUME 2025.pdf" width="100%" height="800px"></iframe>
     </section>
 
     <footer class="animate-fade">
