Updated index.html to fix resume link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <section class="resume animate-up">
-      <iframe src="E:\My Resume sildes\SNAYAK RESUME 2025.pdf" width="100%" height="800px"></iframe>
+      <iframe src="SNAYAK RESUME 2025.pdf" width="100%" height="800px"></iframe>
     </section>
 
     <footer class="animate-fade">
